adding of processing the field 'deposit_double_hash' with store vault service
